--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <form action="" id="loginForm" class="form-visible">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Email" required="true">
+                <input type="email" placeholder="Email" required="true">
                 <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="input-box">
